--- a/index.html
+++ b/index.html
@@ -9,85 +9,105 @@
   <title>Header</title>
 </head>
 <body>
+
   <header class="header">
     <div class="header-container">
       <img src="Images/Group 2.png" alt="Logo" class="logo" />
       <nav class="nav-menu">
-        <a href="#">მთავარი</a>
-        <a href="#">ჩვენ შესახებ</a>
-        <a href="#">სერვისები</a>
-        <a href="#">პროექტები</a>
-        <a href="#">პარტნიორები</a>
-        <a href="#" class="contact-btn">კონტაქტი</a>
+        <ul>
+          <li><a href="#">მთავარი</a></li>
+          <li><a href="#">ჩვენ შესახებ</a></li>
+          <li><a href="#">სერვისები</a></li>
+          <li><a href="#">პროექტები</a></li>
+          <li><a href="#">პარტნიორები</a></li>
+          <li><a href="#" class="contact-btn">კონტაქტი</a></li>
+        </ul>
       </nav>
     </div>
   </header>
 
-  <div class="photo-wrapper">
-    <img src="Images/Rectangle 91.png" alt="Rectangle" class="main-photo" />
-  </div>
+  <main>
+    <section class="photo-wrapper">
+      <img src="Images/Rectangle 91.png" alt="Main Photo" class="main-photo" />
+    </section>
 
-  <div class="photo-title">
-    რატომ ვიყენებთ მას და საიდან მოდის ეს ტექსტი?
-  </div>
+    <section class="photo-title">
+      <h2>რატომ ვიყენებთ მას და საიდან მოდის ეს ტექსტი?</h2>
+    </section>
 
-  <div class="image-row">
-    <div class="image-box" style="background-image: url('Images/Rectangle 92.png');"></div>
-    <div class="image-box" style="background-image: url('Images/Rectangle 93.png');"></div>
-    <div class="image-box" style="background-image: url('Images/Rectangle 94.png');"></div>
-    <div class="image-box" style="background-image: url('Images/Rectangle 95.png');"></div>
-    <div class="image-box" style="background-image: url('Images/Rectangle 96.png');"></div>
-  </div>
+    <section class="image-row">
+      <div class="image-box" style="background-image: url('Images/Rectangle 92.png');"></div>
+      <div class="image-box" style="background-image: url('Images/Rectangle 93.png');"></div>
+      <div class="image-box" style="background-image: url('Images/Rectangle 94.png');"></div>
+      <div class="image-box" style="background-image: url('Images/Rectangle 95.png');"></div>
+      <div class="image-box" style="background-image: url('Images/Rectangle 96.png');"></div>
+    </section>
 
-  <div class="text first">
-    ცნობილი ფაქტია, რომ გვერდის წაკითხვად შიგთავსს შეუძლია მკითხველის ყურადღება მიიზიდოს და დიზაინის აღქმაში ხელი შეუშალოს. Lorem Ipsum-ის გამოყენებით ვღებულობთ იმაზე მეტ-ნაკლებად სწორი გადანაწილების ტექსტის, ვიდრე ერთიდაიგივე გამეორებადი სიტყვებია ხოლმე. შედეგად, ტექსტი ჩვეულებრივ ინგლისურს გავს, მისი წაითხვა კი შეუძლებელია. დღეს უამრავი პერსონალური საგამომცემლო პროგრამა და ვებგვერდი იყენებს Lorem Ipsum-ს, როგორც დროებით tekstiს წყობის შესავსებად; Lorem Ipsum-ის მოძებნისას კი საძიებო სისტემები ბევრ დაუსრულებელ გვერდს გვიჩვენებენ. წლების მანძილზე ამ tekstiის უამრავი ვერსია გამოჩნდა, ზოგი შემთხვევით დაშვებული შეცდომის გამო, ზოგი კი — განზრახ, ხუმრობით.
-  </div>
+    <section class="text-section">
+      <article class="text first">
+        <p>ცნობილი ფაქტია, რომ გვერდის წაკითხვად შიგთავსს შეუძლია მკითხველის ყურადღება მიიზიდოს...</p>
+      </article>
+      <article class="text second">
+        <p>გავრცელებული მოსაზრებით, Lorem Ipsum შემთხვევითი ტექსტი სულაც არაა...</p>
+      </article>
+      <article class="text third">
+        <p>დღეს უკვე Lorem Ipsum-პასაჟის უამრავი ვერსია არსებობს...</p>
+      </article>
+    </section>
 
-  <div class="text second">
-    გავრცელებული მოსაზრებით, Lorem Ipsum შემთხვევითი ტექსტი სულაც არაა. მისი ფესვები ჯერკიდევ ჩვ. წ. აღ-მდე 45 წლის დროინდელი კლასიკური ლათინური ლიტერატურიდან მოდის. ვირჯინიის შტატში მდებარე ჰემპდენ-სიდნეის კოლეჯის პროფესორმა რიჩარდ მაკკლინტოკმა აიღო ერთ-ერთი ყველაზე იშვიათი ლათინური სიტყვა “consectetur” Lorem Ipsum-პასაჟიდან და გადაწყვიტა მოეძებნა იგი კლასიკურ ლიტერატურაში. ძიება შედეგიანი აღმოჩნდა — teksti Lorem Ipsum გადმოწერილი ყოფილა ციცერონის “de Finibus Bonorum et Malorum”-ის 1.10.32 და 1.10.33 თავებიდან. ეს წიგნი ეთიკის თეორიის ტრაქტატია, რომელიც რენესანსის პერიოდში ძალიან იყო გავრცელებული.      მათთვის, ვისაც აინტერესებს, ქვევით მოყვანილია Lorem Ipsum-ის ორიგინალი ნაწყვეტი 1500-იანი წლებიდან. ასევე შეგიძლიათ ნახოთ 1.10.32 და 1.10.33 თავები ციცერონის “de Finibus Bonorum et Malorum”-დან, რომელსაც თან ერთვის 1914 წელს ჰ. რექჰამის შესრულებული ინგლისურენოვანი თარგმანი.
-  </div>
+    <section class="info-box">
+      <p>დამატებითი ინფორმაცია</p>
+    </section>
+  </main>
 
-  <div class="text third">
-    დღეს უკვე Lorem Ipsum-პასაჟის უამრავი ვერსია არსებობს. მათი დიდი ნაწილი ხუმრობით არის შეცვლილი, ბევრი კი უბრალოდ სიტყვების შემთხვევითი გენერირებით დაიწერა. ინტერნეტში არსებული გენერატორები, როგორც წესი, წინასწარ განსაზღვრული tekstiის ნაგლეჯს იმეორებენ ხოლმე, ამიტომ ეს პირველი ნამდვილი გენერატორია. იგი რთული და მართებული სტრუქტურის წინადადებების ასაწყობად 200-მდე ლათინური სიტყვისგან შემდგარ ლექსიკონს იყენებს. შედეგად მიიღება teksti, რომელიც ვიზუალურად მაქსიმალურად ახლოსაა რეალურთან. გენერირებული Lorem Ipsum არასოდეს არ არის გამეორებადი, შემთხვევითი სიტყვების ან ხუმრობების შემცველი.
-  </div>
-
-  <div class="info-box">
-    დამატებითი ინფორმაცია
-  </div>
-
- <footer class="footer">
-  <div class="footer-container">
-    <div class="contact-left">
-      <h2 class="footer-title">კონტაქტი</h2>
-      <p class="footer-description">
-        Lorem Ipsum საბეჭდი და ტიპოგრაფიული ინდუსტრიის უშინაარსო ტექსტია. იგი სტანდარტად 1500-იანი წლებიდან იქცა, როდესაც უცნობმა მბეჭდავმა ამწყობ დაზგაზე წიგნის საცდელი ეგზემპლარი დაბეჭდა.
-      </p>
-      <div class="footer-map"></div>
-      <div class="footer-info">
-        <div class="info-block">
-          <span class="phone-icon">📞</span>
-          <span class="footer-phone">+995 555 444 333</span>
+  <footer class="footer">
+    <div class="footer-container">
+      <div class="contact-left">
+        <h2 class="footer-title">კონტაქტი</h2>
+        <p class="footer-description">
+          Lorem Ipsum საბეჭდი და ტიპოგრაფიული ინდუსტრიის უშინაარსო ტექსტია...
+        </p>
+        <div class="footer-map">
+          <iframe
+            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d41994.4681869944!2d2.292292953243093!3d48.8588441736947!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47e66fda02df2f03%3A0x8d5d5f6e1cc1cc69!2sParis!5e0!3m2!1sen!2sfr!4v1624630492562!5m2!1sen!2sfr"
+            width="463" height="197" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade">
+          </iframe>
         </div>
-        <div class="info-block">
-          <span class="email-icon">📧</span>
-          <span class="footer-email">example@gmail.com</span>
+        <div class="footer-info">
+          <div class="info-block">
+            <span class="phone-icon">📞</span>
+            <span class="footer-phone">+995 555 444 333</span>
+          </div>
+          <div class="info-block">
+            <span class="email-icon">📧</span>
+            <span class="footer-email">example@gmail.com</span>
+          </div>
         </div>
+      </div>
+
+      <div class="contact-right">
+        <form>
+          <label class="footer-label" for="name">სახელი, გვარი</label>
+          <input type="text" id="name" name="name" required />
+
+          <label class="footer-label" for="email">ელ. ფოსტა</label>
+          <input type="email" id="email" name="email" required />
+
+          <label class="footer-label" for="phone">ტელეფონის ნომერი</label>
+          <input type="tel" id="phone" name="phone" />
+
+          <label class="footer-label" for="message">შეტყობინება</label>
+          <textarea id="message" name="message" rows="4"></textarea>
+
+          <button type="submit" class="send-button">გაგზავნა</button>
+        </form>
       </div>
     </div>
 
-    <div class="contact-right">
-      <label class="footer-label">სახელი, გვარი</label>
-      <label class="footer-label">ელ. ფოსტა</label>
-      <label class="footer-label">ტელეფონის ნომერი</label>
-      <label class="footer-label">შეტყობინება</label>
-      <button class="send-button">გაგზავნა</button>
+    <div class="footer-bottom">
+      <p class="footer-rights">ყველა უფლება დაცულია</p>
     </div>
-  </div>
-
-  <div class="footer-bottom">
-    <p class="footer-rights">ყველა უფლება დაცულია</p>
-  </div>
-</footer>
+  </footer>
 
 </body>
 </html>
